--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -390,6 +390,8 @@
     <string name="lx_select_ticket">Select Tickets</string>
     <!-- Free cancellation text in offer  -->
     <string name="lx_free_cancellation">Free Cancellation</string>
+    <!-- Edit search toolbar title -->
+    <string name="edit_search_toolbar">Edit Search</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
