4271: Add view for four LOB case

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -866,6 +866,8 @@
     <string name="nav_hotels">Hotels</string>
     <!-- Cars -->
     <string name="nav_cars">Cars</string>
+    <!-- Activities -->
+    <string name="nav_lx">Activities</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
