Search Results, sort & filter UI changes.
	1. Update sort & filter widget Transition.
	2. Filter row is clickable instead of checkbox.
	3. Polished Sort & Filter UI.
	4. Added Sort & filter button selector.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -668,6 +668,15 @@
         <item quantity="other">Items in Trip</item>
     </plurals>
 
+    <!-- LX Sort & Filter "Apply" header -->
+    <string name="lx_apply_sort_filter">Apply</string>
+    <!-- LX Sort & Filter "Sort By" section header -->
+    <string name="lx_sort_by">Sort By</string>
+    <!-- LX Sort & Filter "Categories" header -->
+    <string name="lx_categories">Categories</string>
+    <!-- LX Sort & Filter "Filter" header -->
+    <string name="lx_filter">Filter</string>
+
     <!-- Tablet hotel filters -->
     <!-- "Sort By" section header -->
     <string name="Sort_By">Sort By</string>
