Wotif action bar themes and assets updated

--- a/project/src/wotif/res/values/strings.xml
+++ b/project/src/wotif/res/values/strings.xml
@@ -7,4 +7,7 @@
 
     <!-- Phone Fragment Header-->
     <string name="nav_accommodation">Accommodation</string>
+
+    <!-- Shop -->
+    <string name="shop">Shop Travel</string>
 </resources>
