--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -214,8 +214,6 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget location hint -->
-    <string name="lx_search_location_hint">Enter location</string>
     <!-- Search widget header text -->
     <string name="lx_search_widget_heading">Dates &amp; Location</string>
     <!-- Button to show calendar and selected dates -->
@@ -232,8 +230,6 @@
     <string name="exclusions_activity_details">Exclusions</string>
     <!-- Activity details know before you book heading -->
     <string name="know_before_you_book_activity_details">Know before you book</string>
-    <!-- Activity details cancellation heading -->
-    <string name="cancellation_activity_details">Cancellation</string>
     <!-- Template for ticket details -->
     <string name="ticket_details_template">%1$s %2$s (%3$s)</string>
     <!-- Template for ticket details without restrictions (eg: $40 Traveler) -->
@@ -546,7 +542,7 @@
     <!-- LX search error -->
     <string name="error_lx_search_message">Your search returned no results. Please retry your search with different criteria.</string> 
     <!-- LX search error -->
-    <string name="error_lx_current_location_search_message">Current location search returned no results. Please retry your search with different criteria.</string> 
+    <string name="error_lx_current_location_search_message">Failed to determine current location.</string> 
     <!-- Text for generic error toolbar-->
     <string name="lx_error_text">Error</string>
     <!-- Text for error toolbar-->
