--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -877,7 +877,7 @@
     <!-- List loading header -->
     <string name="loading_header">Loading&#8230;</string>
     <!-- Hotel list rating text -->
-    <string name="hotel_rating_text">of 5 &#8211; guest rating</string>
+    <string name="hotel_rating_text">of 5</string>
     <!-- Hotel list no rating text -->
     <string name="hotel_no_rating_text">No guest rating</string>
     <!-- Expedia Deal for a given property, Mobile exclusive -->
