--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -575,6 +575,8 @@
     <string name="lx_successful_checkout_reservation_label">Your reservation is confirmed!</string>
     <!-- Text for getting current location suggestion -->
     <string name="lx_getting_current_location">Determining location…</string>
+    <!-- LX Error Fetching activity details -->
+    <string name="lx_error_details">Unable to fetch details. Please try again.</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
