--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -579,6 +579,8 @@
     <string name="lx_error_details">Unable to fetch details. Please try again.</string>
     <!-- Current location failed toolbar text -->
     <string name="lx_error_current_location_toolbar_text">Please try again</string>
+    <!-- LX No Activities for Current location -->
+    <string name="lx_error_current_location_no_results">We couldn\&apos;t find any activities near you. Please retry your search with different criteria.</string>
 
     <!-- Tablet Results strings -->
     <!-- Sort & Filter label -->
